--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -7,8 +7,11 @@
 <!-- ========================= SECTION PAGETOP ========================= -->
 <section class="section-pagetop bg">
 <div class="container">
+	{% if 'search' in request.path %}
+	<h2 class="title-page">Search Results</h2>
+	{% else %}
 	<h2 class="title-page">Our Store</h2>
-	
+	{% endif %}
 </div> <!-- container //  -->
 </section>
 <!-- ========================= SECTION INTRO END// ========================= -->
@@ -130,6 +133,7 @@
 </header><!-- sect-heading -->
 
 <div class="row">
+	{% if products %}
     {% for product in products %}
 	<div class="col-md-4">
 		<figure class="card card-product-grid">
@@ -145,24 +149,78 @@
 						<span class="price">{{ product.price }}</span> 
 					</div> <!-- price-wrap.// -->
 				</div>
-				<a href="#" class="btn btn-block btn-primary">Added to cart </a>
+				<a href="{% url 'add_cart' product.id %}" class="btn btn-block btn-primary">Add to cart </a>
 			</figcaption>
 		</figure>
 	</div> <!-- col.// -->
     {% endfor %}
+	{% else %}
+		<h2>No Results Found. Please try again</h2>
+	{% endif %}
 </div> <!-- row end.// -->
 
 
-<nav class="mt-4" aria-label="Page navigation sample">
-  <ul class="pagination">
-    <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
-    <li class="page-item active"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item"><a class="page-link" href="#">Next</a></li>
-  </ul>
-</nav>
-
+{% if products %}
+				<nav class="mt-4" aria-label="Page navigation sample">
+					<ul class="pagination">
+						{% if products.has_previous %}
+						<li class="page-item">
+							<a class="page-link" href="{% url 'store' %}?page=1">First</a>
+						</li>
+						<li class="page-item">
+							<a class="page-link"
+								href="{% url 'store' %}?page={{products.previous_page_number}}">Previous</a>
+						</li>
+						{% else %}
+						<li class="page-item disabled">
+							<a class="page-link" href="#">First</a>
+						</li>
+						<li class="page-item disabled">
+							<a class="page-link" href="#">Previous</a>
+						</li>
+						{% endif %}
+						{% if products.number|add:'-2' >= 1 %}
+						<li class="page-item">
+							<a class="page-link" href="{% url 'store' %}?page={{ products.number|add:'-2' }}">&hellip;</a>
+						</li>
+						{% endif %}
+						{% for page in products.paginator.page_range %}
+						{% if products.number|add:'-1' <= page and page <= products.number|add:'1' %}
+						{% if page == products.number %}
+						<li class="page-item active">
+							<a class="page-link" href="{% url 'store' %}?page={{ page }}">{{ page }}</a>
+						</li>
+						{% else %}
+						<li class="page-item">
+							<a class="page-link" href="{% url 'store' %}?page={{ page }}">{{ page }}</a>
+						</li>
+						{% endif %}
+						{% endif %}
+						{% endfor %}
+						{% if products.number|add:'2' <= products.paginator.num_pages %}
+						<li class="page-item">
+							<a class="page-link" href="{% url 'store' %}?page={{ products.number|add:'2' }}">&hellip;</a>
+						</li>
+						{% endif %}
+						{% if products.has_next %}
+						<li class="page-item">
+							<a class="page-link" href="{% url 'store' %}?page={{products.next_page_number}}">Next</a>
+						</li>
+						<li class="page-item">
+							<a class="page-link"
+								href="{% url 'store' %}?page={{ products.paginator.num_pages }}">Last</a>
+						</li>
+						{% else %}
+						<li class="page-item disabled">
+							<a class="page-link" href="#">Next</a>
+						</li>
+						<li class="page-item disabled">
+							<a class="page-link" href="#">Last</a>
+						</li>
+						{% endif %}
+					</ul>
+				</nav>
+				{% endif %}
 	</main> <!-- col.// -->
 
 </div>
