--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,9 @@
     <!-- custom javascript -->
     <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
 
-    <script src="https://www.paypal.com/sdk/js?client-id=AUopVWBIvTc4jdtr1XdRZCj7uBaIPqKzOKBEhy04Z5-Z1CmZKEhxEQGErOUYnjwW8p9jTFO5X4xSv1Bv&currency=USD"></script>
+    
+    <script src="https://www.paypal.com/sdk/js?client-id=ATtu-wamgO3lWJD224IyFFjKLAf72eJilLgWD_GTkpKjCAMeDAgojfRU9JA7HvyP1BBUPLLT-WWPUW5k&components=buttons"></script>
+
 
     <script type="text/javascript">
         $(document).ready(function () {
