--- a/templates/accounts/my_orders.html
+++ b/templates/accounts/my_orders.html
@@ -13,21 +13,36 @@
         <main class="col-md-9">
             <article class="card">
             <header class="card-header">
-                <strong class="d-inline-block mr-3">Logged In As :</strong>
-                <span> {{ user.full_name }}</span>
+                <strong class="d-inline-block mr-3">Your Orders</strong>
             </header>
             <div class="card-body">
                 <div class="row"> 
                      
-                    <div class="col-md-6">
-                         <div class="card" style="text-align: center;">
-                            <div class="card-body">
-                                <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar"  width="50" height="50" style="border-radius: 50%;" >
-                                <p class="mb-0">{{ user.email }}</p>
-                                <p>{{ user.phone_number }}</p>
+                    <div class="col-md-12">
+                           
+                        <table class="table table-hover">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Order #</th>
+                                    <th scope="col">Billing Name</th>
+                                    <th scope="col">Phone</th>
+                                    <th scope="col">Order Total</th>
+                                    <th scope="col">Date</th>
+                                </tr>                                                                                                                                                
+                            </thead>
+                            <tbody>
+                                {% for order in orders %}
+                                <tr>
+                                    <th scope="row"> {{ order.order_number }}</th>
+                                    <td> {{ order.full_name }} </td>
+                                    <td> {{ order.phone }} </td>
+                                    <td> {{ order.order_total }} </td>
+                                    <td> {{ order.created_at }} </td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
 
-                            </div>
-                         </div>
                          
                          
                     </div>
