--- a/templates/includes/dashboard_sidebar.html
+++ b/templates/includes/dashboard_sidebar.html
@@ -7,6 +7,6 @@
         <a class="list-group-item" href="#"> Change Password </a> 
     </ul>
     <br>
-    <a class="btn btn-light btn-block" href="#"> <i class="fa fa-power-off"></i> <span class="text">Log out</span> </a> 
+    <a class="btn btn-light btn-block" href="{% url 'logout' %}"> <i class="fa fa-power-off"></i> <span class="text">Log out</span> </a> 
     <!--   SIDEBAR .//END   -->
 </aside>
