--- a/templates/base.html
+++ b/templates/base.html
@@ -48,6 +48,7 @@
 <body>
     <!-- navbar -->
     {% include 'includes/navbar.html' %}
+    {% include 'includes/modal.html' %}
 
 
     {% block content %}
@@ -57,5 +58,6 @@
 
     <!-- footer -->
     {% include 'includes/footer.html' %}
+
 </body>
 </html>
