--- a/templates/home.html
+++ b/templates/home.html
@@ -128,5 +128,11 @@
         </div> <!-- row.// -->
     </div><!-- container // -->
 </section>
+<script>
+    setTimeout(function () {
+        $('#myModal2').modal('show');
+    }, 5000);
+</script>
 <!-- ========================= SECTION  END// ========================= -->
 {% endblock %}
+
