--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -9,7 +9,9 @@
       <div class="collapse navbar-collapse" id="navbarTop4">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item dropdown">
-                 <a href="#" class="nav-link">  <i class="fa fa-solid fa-phone"></i> Customer Support +94 Testing </a>
+                 <a data-toggle="modal" data-target="#myModal2" href="#" class="nav-link">  <i class="fa fa-solid fa-phone"></i> Customer Support +94 Testing </a>
+                 
+                 
             </li>
             <li class="nav-item dropdown">
                 <a href="#" class="nav-link"> <i class="fa fa-solid fa-envelope"></i>   Email : sales@buytyres.lk </a> 
@@ -17,7 +19,10 @@
         </ul>
         <ul class="navbar-nav">
             <li>  <a class="nav-link" href="https://www.facebook.com/besttyre.lk"><i class="fab fa-brands fa-facebook"></i></a>   </li>
-            <li> <a  class="nav-link" href="https://www.instagram.com/besttyre">  <i class="fa-brands fa-instagram"></i></a> </li>
+            <li> <a  class="nav-link" href="https://www.instagram.com/besttyre">  <i class="fab fa-brands fa-instagram"></i></a> </li>
+            <li> <a href="#" class="nav-link" data-toggle="modal" data-target="#myModal2">  <i class="fa fa-solid fa-phone"></i></a> </li>
+
+
         </ul> <!-- list-inline //  -->
       </div> <!-- navbar-collapse .// -->
     </div> <!-- container //  -->
