--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,11 @@
     <!-- navbar -->
     {% include 'includes/navbar.html' %}
     {% include 'includes/modal.html' %}
-
+    <div class="right-sticky-callback">
+        <a href="#" data-toggle="modal" data-target="#myModal2" class="callback-request">
+            <h3>  <i class="fa fa-solid fa-phone"></i>  Request a Call</h3>
+        </a>
+    </div>
 
     {% block content %}
     <!-- content -->
