--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -31,7 +31,7 @@
     <section class="header-main border-bottom">
         <div class="container">
     <div class="row align-items-center">
-        <div class="col-lg-2 col-md-3 col-6">
+        <div class="col-lg-1 col-md-3 col-6">
             <a href="{% url 'home' %}" class="brand-wrap">
                 <img class="logo" src="{% static './images/logo.png' %}">
             </a> <!-- brand-wrap.// -->
@@ -48,7 +48,20 @@
             </div>  <!-- category-wrap.// -->
         </div> <!-- col.// -->
         {% endfor %} 
-      
+        <div class="  ml-auto">
+            <div class="category-wrap dropdown d-inline-block float-right">
+                <a class="link-dark"  href=""> 
+                   Our Brands
+                </a>
+            </div>  <!-- category-wrap.// -->
+        </div> <!-- col.// -->
+        <div class="  ml-auto">
+            <div class="category-wrap dropdown d-inline-block float-right">
+                <a class="link-dark"  href=""> 
+                   FAQ
+                </a>
+            </div>  <!-- category-wrap.// -->
+        </div> <!-- col.// -->
         <div class="col-lg-3 col-sm-6 col-8 order-2 order-lg-3">
                     <div class="d-flex justify-content-end mb-3 mb-lg-0">
                         {% if user.id is None %}
