--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -50,7 +50,7 @@
         {% endfor %} 
         <div class="  ml-auto">
             <div class="category-wrap dropdown d-inline-block float-right">
-                <a class="link-dark"  href=""> 
+                <a class="link-dark"  href="{% url 'brands' %}"> 
                    Our Brands
                 </a>
             </div>  <!-- category-wrap.// -->
