--- a/templates/home.html
+++ b/templates/home.html
@@ -7,25 +7,25 @@
     <div class="container">
         <div  style="align: center;" class="intro-banner-wrap">
             {% include "includes/alerts.html" %}
-           
+            
         </div>
     </div> <!-- container //  -->
     
     <div class='col-lg-12'>
-
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="rounded mx-auto d-block img-fluid " style="height:400px;" src="{% static 'images/banners/nankang_head.jpg' %}" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="rounded mx-auto d-block img-fluid" style="height:400px;" src="{% static 'images/banners/INSTA3.png' %}" alt="Second slide">
-          </div>
-          <div class="carousel-item">
-            <img class="rounded mx-auto d-block img-fluid" style="height:400px;" src="{% static 'images/banners/nkban1.jpg' %}" alt="Third slide">
-          </div>
+        
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="rounded mx-auto d-block img-fluid " style="height:400px;" src="{% static 'images/banners/nankang_head.jpg' %}" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="rounded mx-auto d-block img-fluid" style="height:400px;" src="{% static 'images/banners/INSTA3.png' %}" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="rounded mx-auto d-block img-fluid" style="height:400px;" src="{% static 'images/banners/nkban1.jpg' %}" alt="Third slide">
+                </div>
+            </div>
         </div>
-      </div>
     </div>
     
 </section>
@@ -45,161 +45,203 @@
             <div class="col-sm-4">
                 <p>How to find car tyre size? <br>
                     215 is the section width of a tyre, 60 is Aspect Ratio of tyre, 16 is Diameter of the wheel rim</p>
-               
-                <img src="{% static 'images/banners/tyresize.jpeg' %}">
-            </div>
-            
-            <div class="col-sm-5">
-            <form action="{% url 'search_size' %}" method="GET" class="search">
-
-                <div class="form-group row">
-
-                <label class="col-sm-2 " for="width">Width</label>
-                <div class="col-sm-5"> 
-                <select class="form-control" onclick="getsizes('width');" id="width"name="width">
-                    <option>Width</option>
-                {% for width in width %}
-                    <option>{{ width.width }}</option>
-                {% endfor %}
-                </select>
+                    
+                    <img class="img-fluid" src="{% static 'images/banners/tyresize.jpeg' %}">
                 </div>
-                </div>
-
-                <div class="form-group row">
-                <label class="col-sm-2" for="profile">Profile</label>
-                <div class="col-sm-5"> 
-                <select class="form-control" onclick="getsizes('profile');" id="profile"name="profile">
-               
-                    <option>Profile</option>
                 
-                </select>
+                <div class="col-sm-5">
+                    <form action="{% url 'search_size' %}" method="GET" class="search">
+                        
+                        <div class="form-group row">
+                            
+                            <label class="col-sm-2 " for="width">Width</label>
+                            <div class="col-sm-5"> 
+                                <select class="form-control" onclick="getsizes('width');" id="width"name="width">
+                                    <option>Width</option>
+                                    {% for width in width %}
+                                    <option>{{ width.width }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                        </div>
+                        
+                        <div class="form-group row">
+                            <label class="col-sm-2" for="profile">Profile</label>
+                            <div class="col-sm-5"> 
+                                <select class="form-control" onclick="getsizes('profile');" id="profile"name="profile">
+                                    
+                                    <option>Profile</option>
+                                    
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-sm-2" for="diameter">Rim Size</label>
+                            <div class="col-sm-5"> 
+                                <select class="form-control"  id="diameter"name="diameter">
+                                    
+                                    <option>Rim Size</option>
+                                    
+                                </select>
+                            </div>
+                            
+                            <div class="col-sm-2"> 
+                                <input type="radio"  id="view1" value="view1" name="view1">View 1
+                            </div>
+                            <div class="col-sm-2"> 
+                                <input type="radio"   id="view2" value="view2" name="view1">View 2
+                            </div>
+                        </div>
+                        
+                        
+                        
+                        <button class="btn btn-primary" type="submit">
+                            Search
+                            <i class="fa fa-search"></i>
+                        </button>
+                        
+                    </form> 
                 </div>
-                </div>
-                <div class="form-group row">
-                <label class="col-sm-2" for="diameter">Rim Size</label>
-                <div class="col-sm-5"> 
-                <select class="form-control"  id="diameter"name="diameter">
                 
-                    <option>Rim Size</option>
-                
-                </select>
-                </div>
-                </div>
-                <button class="btn btn-primary" type="submit">
-                    Search
-                    <i class="fa fa-search"></i>
-                </button>
-                
-            </form> 
-            </div>
-             
-        </div> <!-- row.// -->
-    </div><!-- container // -->
-</section>
-
-<div class="pt-5">
-  
-
-      
-        <img class="rounded mx-auto d-block img-fluid" src="{% static 'images/banners/kenda.png' %}">
+            </div> <!-- row.// -->
+        </div><!-- container // -->
+    </section>
     
-</div>   
+    <section class="section-name padding-y-sm">
+        <div class="container">
+    <div class="row">
 
- 
-
-<!-- ========================= SECTION  ========================= -->
-<section class="section-name padding-y-sm">
-    <div class="container">
-        <header class="section-heading">
-            <a href="{% url 'store' %}" class="btn btn-outline-primary float-right">See all</a>
-            <h3 class="section-title">Popular products</h3>
-        </header><!-- sect-heading -->
-        <div class="row">
-            {% for product in products %}
-            <div class="col-md-3">
-                <div class="card card-product-grid">
-                    <a href="{{ product.get_url }}" class="img-wrap"> <img src="{{ product.images.url }}"> </a>
-                    <figcaption class="info-wrap">
-                        <a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
-                        <div class="price mt-1">Rs.{{ product.price }}</div> <!-- price-wrap.// -->
-                    </figcaption>
-                </div>
-            </div> <!-- col.// -->
-            {% endfor %}
-        </div> <!-- row.// -->
-    </div><!-- container // -->
-</section>
-<script>
-    setTimeout(function () {
-        $('#myModal2').modal('show');
-    }, 2000);
-
-
-    function getsizes(cmbselect) {
-
-      
-        // preventing from page reload and default actions
-       
-        // serialize the data for sending the form data.
-        var serializedData = $(this).serialize();
-        // make POST ajax call
-
-        var data = new FormData();
-        
-        if (cmbselect == "width") {
-            var dataString = "width="+ document.getElementById("width").value;
-        }
-        if (cmbselect == "profile") {
-            var dataString = "width="+ document.getElementById("width").value + "&profile="+ document.getElementById("profile").value;
-        }
          
+        <header class="section-heading">
+            <h3 class="section-title">The "BEST TYRE" Experience</h3>
+        </header><!-- sect-heading -->
+
+    </div>
+
+
+    <div class="row d-flex justify-content-center" >
+        
+        <div class="col-sm-2">
+            <h3 class="">You search</h3>
+            <p class="">Search over <strong>~100 tyres</strong> to find the right tyre for your car</p>
+        </div>
+        
+        <div class="col-sm-2">              
+            <h3 class="">You buy</h3>
+            <p class="">Purchase &amp; save up to <strong>45% off</strong> MRP</p>
+        </div>
+        
+        <div class="col-sm-2">              
+            <h3 class="">We deliver</h3>
+            <p class="">We’ll deliver your tyres to one of our fitment locations or your preferred address <strong>FAST &amp; FREE<sup>+</sup></strong> (exclusions apply see <a class="sc-dzVpKk bBBwQO" href="/learn-more/purchasing-tyres/delivery-information">Delivery Information</a>. for further details)</p>
+        </div>
         
 
-        $.ajax({
-            type: 'GET',
-            url: "{% url 'get_sizes' %}",
-            data: dataString,
-            success: function (response) {
-                if (cmbselect == "width") {
-                    var mySelect = document.getElementById('profile');
-                    mySelect.options.length = 0;
-                    mySelect.options[0] = new Option ("Profile", "Profile");
-                    i = 1;
-                    response.width.forEach(function (item) { 
-                        mySelect.options[i] = new Option (item.height, item.height);
-                        i = i +1;
-                    }); 
-                    var mySelect = document.getElementById('diameter');
-                    mySelect.options.length = 0;
-                    mySelect.options[0] = new Option ("Rim Size", "Rim Size");
+        <div class="col-sm-2">              
+            <h3 class="">We install</h3>
+            <p class="">Our <strong>Mobile Fitting Vans</strong> can come to you, or select one of our <strong>preferred Fitment Centre's</strong> to install your tyres and they'll do the rest^</p>
+        </div>
+        
 
-                }
-
-                if (cmbselect == "profile") {
-                    var mySelect = document.getElementById('diameter');
-                    mySelect.options.length = 0;
-                    mySelect.options[0] = new Option ("Rim Size", "Rim Size");
-                    i = 1;
-                    response.width.forEach(function (item) { 
-                        mySelect.options[i] = new Option (item.diameter, item.diameter);
-                        i = i +1;
-                    }); 
-                }
-
-                 
-            },
-            error: function (response) {
-                // alert the error if any error occured
-                alert(response["responseJSON"]["error"]);
+    </div>
+    </div>
+</section>
+    
+    
+    <!-- ========================= SECTION  ========================= -->
+    <section class="section-name padding-y-sm">
+        <div class="container">
+            <header class="section-heading">
+                <a href="{% url 'store' %}" class="btn btn-outline-primary float-right">See all</a>
+                <h3 class="section-title">Popular products</h3>
+            </header><!-- sect-heading -->
+            <div class="row">
+                {% for product in products %}
+                <div class="col-md-3">
+                    <div class="card card-product-grid">
+                        <a href="{{ product.get_url }}" class="img-wrap"> <img src="{{ product.images.url }}"> </a>
+                        <figcaption class="info-wrap">
+                            <a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
+                            <div class="price mt-1">Rs.{{ product.price }}</div> <!-- price-wrap.// -->
+                        </figcaption>
+                    </div>
+                </div> <!-- col.// -->
+                {% endfor %}
+            </div> <!-- row.// -->
+        </div><!-- container // -->
+    </section>
+    <script>
+        setTimeout(function () {
+            $('#myModal2').modal('show');
+        }, 2000);
+        
+        getsizes('width');
+        
+        function getsizes(cmbselect) {
+            
+            
+            // preventing from page reload and default actions
+            
+            // serialize the data for sending the form data.
+            var serializedData = $(this).serialize();
+            // make POST ajax call
+            
+            var data = new FormData();
+            
+            if (cmbselect == "width") {
+                var dataString = "width="+ document.getElementById("width").value;
             }
-        })
-    }
-
-     
-
-
-
-</script>
-<!-- ========================= SECTION  END// ========================= -->
-{% endblock %}
-
+            if (cmbselect == "profile") {
+                var dataString = "width="+ document.getElementById("width").value + "&profile="+ document.getElementById("profile").value;
+            }
+            
+            
+            
+            $.ajax({
+                type: 'GET',
+                url: "{% url 'get_sizes' %}",
+                data: dataString,
+                success: function (response) {
+                    if (cmbselect == "width") {
+                        var mySelect = document.getElementById('profile');
+                        mySelect.options.length = 0;
+                        mySelect.options[0] = new Option ("Profile", "Profile");
+                        i = 1;
+                        response.width.forEach(function (item) { 
+                            mySelect.options[i] = new Option (item.height, item.height);
+                            i = i +1;
+                        }); 
+                        var mySelect = document.getElementById('diameter');
+                        mySelect.options.length = 0;
+                        mySelect.options[0] = new Option ("Rim Size", "Rim Size");
+                        
+                    }
+                    
+                    if (cmbselect == "profile") {
+                        var mySelect = document.getElementById('diameter');
+                        mySelect.options.length = 0;
+                        mySelect.options[0] = new Option ("Rim Size", "Rim Size");
+                        i = 1;
+                        response.width.forEach(function (item) { 
+                            mySelect.options[i] = new Option (item.diameter, item.diameter);
+                            i = i +1;
+                        }); 
+                    }
+                    
+                    
+                },
+                error: function (response) {
+                    // alert the error if any error occured
+                    alert(response["responseJSON"]["error"]);
+                }
+            })
+        }
+        
+        
+        
+        
+        
+    </script>
+    <!-- ========================= SECTION  END// ========================= -->
+    {% endblock %}
+    
