--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,96 +1,89 @@
 {% load static %}
 
 <header class="section-header">
-    <nav class="navbar p-md-0 navbar-expand-sm navbar-light border-bottom">
-    <div class="container">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTop4" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTop4">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item dropdown">
-                 <a data-toggle="modal" data-target="#myModal2" href="#" class="nav-link">  <i class="fa fa-solid fa-phone"></i> Customer Support +94 Testing </a>
-                 
-                 
-            </li>
-            <li class="nav-item dropdown">
-                <a href="#" class="nav-link"> <i class="fa fa-solid fa-envelope"></i>   Email : sales@buytyres.lk </a> 
-            </li>
-        </ul>
-        <ul class="navbar-nav">
-            <li>  <a class="nav-link" href="https://www.facebook.com/besttyre.lk"><i class="fab fa-brands fa-facebook"></i></a>   </li>
-            <li> <a  class="nav-link" href="https://www.instagram.com/besttyre">  <i class="fab fa-brands fa-instagram"></i></a> </li>
-            <li> <a href="#" class="nav-link" data-toggle="modal" data-target="#myModal2">  <i class="fa fa-solid fa-phone"></i></a> </li>
 
 
-        </ul> <!-- list-inline //  -->
-      </div> <!-- navbar-collapse .// -->
-    </div> <!-- container //  -->
-    </nav>
-    
-    <section class="header-main border-bottom">
-        <div class="container">
-    <div class="row align-items-center">
-        <div class="col-lg-1 col-md-3 col-6">
-            <a href="{% url 'home' %}" class="brand-wrap">
-                <img class="logo" src="{% static './images/logo.png' %}">
-            </a> <!-- brand-wrap.// -->
+    <div class="topbar">
+        <div class="container d-flex justify-content-between">
+            <div class="p-2 ">
+                <a data-toggle="modal" data-target="#myModal2" href="#" class="link-dark">  <i class="fa fa-solid fa-phone"></i> &nbsp;  Customer Support +94 Testing </a> &nbsp;&nbsp;&nbsp;&nbsp;  
+                 <i class="fa-solid fa-envelope"></i>  &nbsp; Email :  sales@besttyre.lk  
+            </div>
+            
+            <div class=" p-2 ">
+                <a href="https://www.facebook.com/besttyre.lk"><i class="fa-brands fa-facebook"></i></a>  &nbsp; &nbsp;
+            <a href="https://www.instagram.com/besttyre">  <i class="fa-brands fa-instagram"></i></a>  &nbsp; &nbsp;
+              <a href="#" class="link-dark" data-toggle="modal" data-target="#myModal2">  <i class="fa fa-solid fa-phone"></i></a>  
+            </div>
         </div>
-        {% for category in links %}
-        <div class="  ml-auto">
-            <div class="category-wrap dropdown d-inline-block float-right">
-                <a class="link-dark"  href="{{ category.get_url }}"> 
-                    {{ category.category_name  }}
-                </a>
-                 
-                
+    </div>
+
+    <section class="header-main border-bottom">
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="{% url 'home' %}"> <img class="logo" src="{% static './images/logo.png' %}"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            {% for category in links %}
+
+            <li class="nav-item active">
+                <a class="nav-link" href="{{ category.get_url }}">  {{ category.category_name  }}</a>
+              </li>
+ 
+            {% endfor %}
+            <li class="nav-item active">
+              <a class="nav-link" href="{% url 'brands' %}">Our Brands</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#">FAQ</a>
+            </li>
              
-            </div>  <!-- category-wrap.// -->
-        </div> <!-- col.// -->
-        {% endfor %} 
-        <div class="  ml-auto">
-            <div class="category-wrap dropdown d-inline-block float-right">
-                <a class="link-dark"  href="{% url 'brands' %}"> 
-                   Our Brands
-                </a>
-            </div>  <!-- category-wrap.// -->
-        </div> <!-- col.// -->
-        <div class="  ml-auto">
-            <div class="category-wrap dropdown d-inline-block float-right">
-                <a class="link-dark"  href=""> 
-                   FAQ
-                </a>
-            </div>  <!-- category-wrap.// -->
-        </div> <!-- col.// -->
-        <div class="col-lg-3 col-sm-6 col-8 order-2 order-lg-3">
-                    <div class="d-flex justify-content-end mb-3 mb-lg-0">
-                        {% if user.id is None %}
-                        <div class="widget-header">
-                            <small class="title text-muted">Welcome guest!</small>
-                            <div> 
-                                <a href="{% url 'login' %}">Sign in</a> <span class="dark-transp"> | </span>
-                                <a href="{% url 'register' %}"> Register</a>
-                            </div>
+            <li class="nav-item active">
+                <a class="nav-link" href="#"><div class="col-sm-5"></div></a>
+              </li>
+
+            <li class="nav-item active">
+
+                <div class="d-flex justify-content-end">
+                    {% if user.id is None %}
+                    <div class="widget-header">
+                        <small class="title text-muted">Welcome guest!</small>
+                        <div> 
+                            <a href="{% url 'login' %}">Sign in</a> <span class="dark-transp"> | </span>
+                            <a href="{% url 'register' %}"> Register</a>
                         </div>
-                        {% else %}
-                        <div class="widget-header">
-                            <small class="title text-muted">Welcome {{ user.first_name }}!</small>
-                            <div>
-                                <a href="{% url 'dashboard' %}">Dashboard</a> <span class="dark-transp"> | </span>
-                                <a href="{% url 'logout' %}"> Logout</a>
-                            </div>
+                    </div>
+                    {% else %}
+                    <div class="widget-header">
+                        <small class="title text-muted">Welcome {{ user.first_name }}!</small>
+                        <div>
+                            <a href="{% url 'dashboard' %}">Dashboard</a> <span class="dark-transp"> | </span>
+                            <a href="{% url 'logout' %}"> Logout</a>
                         </div>
-                        {% endif %}
-                        <a href="{% url 'cart' %}" class="widget-header pl-3 ml-3">
-                            <div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
-                            <span class="badge badge-pill badge-danger notify">{{ cart_count }}</span>
-                        </a>
-                    </div> <!-- widgets-wrap.// -->
-                </div> <!-- col.// -->
-    </div> <!-- row.// -->
-        </div> <!-- container.// -->
+                    </div>
+                    {% endif %}
+                    <a href="{% url 'cart' %}" class="widget-header pl-3 ml-3">
+                        <div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
+                        <span class="badge badge-pill badge-danger notify">{{ cart_count }}</span>
+                    </a>
+                </div> <!-- widgets-wrap.// -->
+
+            </li>
+
+
+          </ul>
+        </div>
+      </nav>
     </section> <!-- header-main .// -->
-    
+
+
+     
     
     
     
