--- a/templates/store/store_search.html
+++ b/templates/store/store_search.html
@@ -6,187 +6,138 @@
 
 <!-- ========================= SECTION PAGETOP ========================= -->
 <section class="section-pagetop bg">
-<div class="container">
-	{% if 'search' in request.path %}
-	<h4 class="title-page">Search Results</h4>
-	{% else %}
-	<h2 class="title-page">Our Store</h2>
-	{% endif %}
-</div> <!-- container //  -->
+	<div class="container">
+		{% if 'search' in request.path %}
+		<h4 class="title-page">Search Results</h4>
+		{% else %}
+		<h2 class="title-page">Our Store</h2>
+		{% endif %}
+	</div> <!-- container //  -->
 </section>
 <!-- ========================= SECTION INTRO END// ========================= -->
 
 <!-- ========================= SECTION CONTENT ========================= -->
 <section class="section-content p-2">
-<div class="container">
-
-
-<div class="row">
-	<aside class="col-md-3">
+	<div class="container">
 		
-<div class="card">
-	<article class="filter-group">
-		<header class="card-header">
-			<a href="#" data-toggle="collapse" data-target="#collapse_1" aria-expanded="true" class="">
-				<i class="icon-control fa fa-chevron-down"></i>
-				<h6 class="title">Categories</h6>
-			</a>
-		</header>
-		<div class="filter-content collapse show" id="collapse_1" style="">
-			<div class="card-body">
+		
+		<div class="row">
+			<aside class="col-md-3">
 				
-				<ul class="list-menu"> 
-				{% for category in links %}	
-				<li><a href="{{ category.get_url }}"> {{ category.category_name  }}</a></li>
-					 
+				<div class="card">
+					<div class="card-body">
+					<form action="{% url 'search_size' %}" method="GET" class="search">
+                        
+                        <div class="form-group row">
+                            
+                            <label class="col-sm-4" for="width">Width</label>
+                            <div class="col-sm-6"> 
+                                <select class="form-control" onclick="getsizes('width');" id="width"name="width">
+									
+                                    <option>Width</option>
+                                    {% for width in width %}
+									{% if width.width == swidth %}
+									<option selected>{{ width.width }}</option>
+									{% else %}
+                                    <option>{{ width.width }}</option>
+									{% endif %}
+                                    {% endfor %}
+                                </select>
+                            </div>
+                        </div>
+                        
+                        <div class="form-group row">
+                            <label class="col-sm-4" for="profile">Profile</label>
+                            <div class="col-sm-6"> 
+                                <select class="form-control" onclick="getsizes('profile');" id="profile"name="profile">
+                                    
+                                    <option>Profile</option>
 
-				{% endfor %} 
+                                    
+									<option selected>{{ sprofile }}</option>
+									 
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-sm-4" for="diameter">Rim Size</label>
+                            <div class="col-sm-6"> 
+                                <select class="form-control"  id="diameter"name="diameter">
+                                    
+                                    <option>Rim Size</option>
+                                    <option selected>{{ sdiameter }}</option>
+						
+                                </select>
+                            </div>
+                            
+                            
+                        </div>
+                        
+                        <input type="hidden" id="view1"  name="view1" value="view1">
+                        
+                        <button class="btn btn-primary" type="submit">
+                            Filter
+                            <i class="fa fa-search"></i>
+                        </button>
+                        
+                    </form> 
+					
+				</div> 
+				</div> <!-- card.// -->
+				
+			</aside> <!-- col.// -->
+			<main class="col-md-9">
+				
+				
+				
+				<header class="border-bottom mb-4 pb-3">
+					<div class="form-inline">
+						<span class="mr-md-auto">{{ product_count }} Items found </span>
+						
+					</div>
+				</header><!-- sect-heading -->
+				
 				 
-				</ul>
+				
+				<div class="row">
+					
+					<table class="table">
+						<tr>
+							<th>Product</th>
+							<th>Country</th>
+							<th>Price</th>
+						</tr>
+						
+						{% if products %}
+						
+						{% for product in products %}
+						
+						<tr>
+							<td><a href="{{ product.get_url }}"> {{ product.product_name }}</a></td>
+							<td><a href="{{ product.get_url }}">{{ product.country }}</a></td>
+							<td><a href="{{ product.get_url }}">{{ product.price }}</a></td>	
+						</tr>
+						
+						{% endfor %}
+					</table>
+					
+					{% else %}
+					<h2>No Results Found. Please try again</h2>
+					{% endif %}
+				</div> <!-- row end.// -->
+				
+				
 
-			</div> <!-- card-body.// -->
-		</div>
-
-		 
-
-
-
-	</article> <!-- filter-group  .// -->
-	<article class="filter-group">
-		<header class="card-header">
-			<a href="#" data-toggle="collapse" data-target="#collapse_4" aria-expanded="true" class="">
-				<i class="icon-control fa fa-chevron-down"></i>
-				<h6 class="title">Brands</h6>
-			</a>
-		</header>
-		<div class="filter-content collapse show" id="collapse_4" style="">
-			<div class="card-body">
-				{% for brand in brands %}	
-			  <label class="checkbox-btn">
-			    <input type="checkbox">
-			    <span class="btn btn-light"> {{ brand.brand }} </span>
-			  </label>
-			  {% endfor %} 
-			  
-		</div><!-- card-body.// -->
-		</div>
-	</article> <!-- filter-group .// -->
-	
-
-	
-</div> <!-- card.// -->
-
-	</aside> <!-- col.// -->
-	<main class="col-md-9">
-
-
-
-<header class="border-bottom mb-4 pb-3">
-		<div class="form-inline">
-			<span class="mr-md-auto">{{ product_count }} Items found </span>
+				
+				
+				
+				
+				 
+			</main> <!-- col.// -->
 			
 		</div>
-</header><!-- sect-heading -->
-
-<div class="pb-5">
-	<img class="rounded mx-auto d-block img-fluid" src="{% static 'images/banners/sizeguid.png' %}">
-</div>  
-
-
-<div class="row">
-	{% if products %}
-    {% for product in products %}
-	<div class="col-md-4">
-		<figure class="card card-product-grid">
-			<div class="img-wrap"> 
-				
-				<img src="{{ product.images.url }}">
-				
-			</div> <!-- img-wrap.// -->
-			<figcaption class="info-wrap">
-				<div class="fix-height">
-					<a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
-					<div class="price-wrap mt-2">
-						<span class="price">{{ product.price }}</span> 
-					</div> <!-- price-wrap.// -->
-				</div>
-				<a href="{% url 'add_cart' product.id %}" class="btn btn-block btn-primary">Add to cart </a>
-			</figcaption>
-		</figure>
-	</div> <!-- col.// -->
-    {% endfor %}
-	{% else %}
-		<h2>No Results Found. Please try again</h2>
-	{% endif %}
-</div> <!-- row end.// -->
-
-
-{% if products %}
-				<nav class="mt-4" aria-label="Page navigation sample">
-					<ul class="pagination">
-						{% if products.has_previous %}
-						<li class="page-item">
-							<a class="page-link" href="{% url 'store' %}?page=1">First</a>
-						</li>
-						<li class="page-item">
-							<a class="page-link"
-								href="{% url 'store' %}?page={{products.previous_page_number}}">Previous</a>
-						</li>
-						{% else %}
-						<li class="page-item disabled">
-							<a class="page-link" href="#">First</a>
-						</li>
-						<li class="page-item disabled">
-							<a class="page-link" href="#">Previous</a>
-						</li>
-						{% endif %}
-						{% if products.number|add:'-2' >= 1 %}
-						<li class="page-item">
-							<a class="page-link" href="{% url 'store' %}?page={{ products.number|add:'-2' }}">&hellip;</a>
-						</li>
-						{% endif %}
-						{% for page in products.paginator.page_range %}
-						{% if products.number|add:'-1' <= page and page <= products.number|add:'1' %}
-						{% if page == products.number %}
-						<li class="page-item active">
-							<a class="page-link" href="{% url 'store' %}?page={{ page }}">{{ page }}</a>
-						</li>
-						{% else %}
-						<li class="page-item">
-							<a class="page-link" href="{% url 'store' %}?page={{ page }}">{{ page }}</a>
-						</li>
-						{% endif %}
-						{% endif %}
-						{% endfor %}
-						{% if products.number|add:'2' <= products.paginator.num_pages %}
-						<li class="page-item">
-							<a class="page-link" href="{% url 'store' %}?page={{ products.number|add:'2' }}">&hellip;</a>
-						</li>
-						{% endif %}
-						{% if products.has_next %}
-						<li class="page-item">
-							<a class="page-link" href="{% url 'store' %}?page={{products.next_page_number}}">Next</a>
-						</li>
-						<li class="page-item">
-							<a class="page-link"
-								href="{% url 'store' %}?page={{ products.paginator.num_pages }}">Last</a>
-						</li>
-						{% else %}
-						<li class="page-item disabled">
-							<a class="page-link" href="#">Next</a>
-						</li>
-						<li class="page-item disabled">
-							<a class="page-link" href="#">Last</a>
-						</li>
-						{% endif %}
-					</ul>
-				</nav>
-				{% endif %}
-	</main> <!-- col.// -->
-
-</div>
-
-</div> <!-- container .//  -->
+		
+	</div> <!-- container .//  -->
 </section>
 <!-- ========================= SECTION CONTENT END// ========================= -->
 
@@ -201,5 +152,75 @@
 		</p>
 	</div><!-- //container -->
 </footer>
+
+
+<script>
+ 
+	
+	function getsizes(cmbselect) {
+		
+		
+		// preventing from page reload and default actions
+		
+		// serialize the data for sending the form data.
+		var serializedData = $(this).serialize();
+		// make POST ajax call
+		
+		var data = new FormData();
+		
+		if (cmbselect == "width") {
+			var dataString = "width="+ document.getElementById("width").value;
+		}
+		if (cmbselect == "profile") {
+			var dataString = "width="+ document.getElementById("width").value + "&profile="+ document.getElementById("profile").value;
+		}
+		
+		
+		
+		$.ajax({
+			type: 'GET',
+			url: "{% url 'get_sizes' %}",
+			data: dataString,
+			success: function (response) {
+				if (cmbselect == "width") {
+					var mySelect = document.getElementById('profile');
+					mySelect.options.length = 0;
+					mySelect.options[0] = new Option ("Profile", "Profile");
+					i = 1;
+					response.width.forEach(function (item) { 
+						mySelect.options[i] = new Option (item.height, item.height);
+						i = i +1;
+					}); 
+					var mySelect = document.getElementById('diameter');
+					mySelect.options.length = 0;
+					mySelect.options[0] = new Option ("Rim Size", "Rim Size");
+					
+				}
+				
+				if (cmbselect == "profile") {
+					var mySelect = document.getElementById('diameter');
+					mySelect.options.length = 0;
+					mySelect.options[0] = new Option ("Rim Size", "Rim Size");
+					i = 1;
+					response.width.forEach(function (item) { 
+						mySelect.options[i] = new Option (item.diameter, item.diameter);
+						i = i +1;
+					}); 
+				}
+				
+				
+			},
+			error: function (response) {
+				// alert the error if any error occured
+				alert(response["responseJSON"]["error"]);
+			}
+		})
+	}
+	
+	
+	
+	
+	
+</script>
 <!-- ========================= FOOTER END // ========================= -->
 {% endblock %}
