--- a/Greatkart/static/css/custom.css
+++ b/Greatkart/static/css/custom.css
@@ -63,18 +63,18 @@ ul.thumb li img {
 	.navbar .nav-item .dropdown-menu{ margin-top:0; }
 }	
 
- 
-
-  a {
+a {
     color: black;
     text-decoration: none;
 }
 
 a:hover, a:focus {
-    color: #2A6496; 
+    color: black; 
 }
 
-
+.topbar a:hover, a:focus {
+    color: white; 
+}
 .modal.left .modal-dialog,
 	.modal.right .modal-dialog {
 		position: fixed;
