--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -91,7 +91,10 @@
 	<div class="col-md-4">
 		<figure class="card card-product-grid">
 			<div class="img-wrap"> 
-				
+				{% if product.discount > 0 %}
+				<span class="tag-on-sale onsale sale-left">-{{ product.discount }}%</span>
+				{% endif %}
+
 				<img src="{{ product.images.url }}">
 				
 			</div> <!-- img-wrap.// -->
@@ -99,7 +102,18 @@
 				<div class="fix-height">
 					<a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
 					<div class="price-wrap mt-2">
-						<span class="price">{{ product.price }}</span> 
+					
+						{% if product.discount > 0 %}
+						<del aria-hidden="true">
+						<span class="price-old">{{ product.price }}</span>
+						
+						</del>
+						
+						<span class="price">{{ product.get_selling }}</span>
+
+						{% else %}
+						<span class="price">{{ product.price }}</span>
+						{% endif %}
 					</div> <!-- price-wrap.// -->
 				</div>
 				<a href="{% url 'add_cart' product.id %}" class="btn btn-block btn-primary">Add to cart </a>
