--- a/Greatkart/static/css/custom.css
+++ b/Greatkart/static/css/custom.css
@@ -124,4 +124,23 @@ a:hover, a:focus {
 		right: 0;
 	}
 
- 
+	.onsale.sale-left {
+		left: 10px;
+	}
+
+	.onsale {
+		color: #ffffff;
+		background-color: #1346af;
+		border-radius: 0px;
+	}
+
+	.onsale {
+		position: absolute;
+		top: 10px;
+		pointer-events: none;
+		padding: 5px;
+		font-size: 12px;
+		z-index: 2;
+		line-height: 1;
+		direction: ltr;
+	}
