--- a/Greatkart/static/css/ui.css
+++ b/Greatkart/static/css/ui.css
@@ -1539,3 +1539,25 @@ div {
   height: 60px;
   fill: rgb(0, 124, 194);
 }
+
+
+.onsale.sale-left {
+  left: 10px;
+}
+
+.onsale {
+  color: #ffffff;
+  background-color: #1346af;
+  border-radius: 0px;
+}
+
+.onsale {
+  position: absolute;
+  top: 10px;
+  pointer-events: none;
+  padding: 5px;
+  font-size: 12px;
+  z-index: 2;
+  line-height: 1;
+  direction: ltr;
+}
