--- a/templates/home.html
+++ b/templates/home.html
@@ -78,7 +78,7 @@
                         <div class="form-group row">
                             <label class="col-sm-2" for="diameter">Rim Size</label>
                             <div class="col-sm-5"> 
-                                <select class="form-control"  id="diameter"name="diameter">
+                                <select class="form-control"    id="diameter"name="diameter">
                                     
                                     <option>Rim Size</option>
                                     
@@ -93,7 +93,14 @@
                             </div>
                         </div>
                         
-                        
+                        <div class="form-group row">
+                            <label class="col-sm-2" for="terrain">Terrain</label>
+                            <div class="col-sm-5"> 
+                                <select class="form-control" id="terrain"name="terrain">
+                                    <option>Terrain</option>
+                                </select>
+                            </div>
+                        </div>
                         
                         <button class="btn btn-primary" type="submit">
                             Search
