--- a/templates/store/store_search_view.html
+++ b/templates/store/store_search_view.html
@@ -104,6 +104,11 @@
 		<figure class="card card-product-grid">
 			<div class="img-wrap"> 
 				
+				{% if product.discount > 0 %}
+				<span class="tag-on-sale onsale sale-left">-{{ product.discount }}%</span>
+				{% endif %}
+
+				
 				<img src="{{ product.images.url }}">
 				
 			</div> <!-- img-wrap.// -->
