--- a/templates/home.html
+++ b/templates/home.html
@@ -166,10 +166,30 @@
                 {% for product in products %}
                 <div class="col-md-3">
                     <div class="card card-product-grid">
-                        <a href="{{ product.get_url }}" class="img-wrap"> <img src="{{ product.images.url }}"> </a>
+
+                        <a href="{{ product.get_url }}" class="img-wrap">
+                            {% if product.discount > 0 %}
+                            <span class="tag-on-sale onsale sale-left">-{{ product.discount }}%</span>
+                            {% endif %}
+                             <img src="{{ product.images.url }}">
+                        </a>
                         <figcaption class="info-wrap">
                             <a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
-                            <div class="price mt-1">Rs.{{ product.price }}</div> <!-- price-wrap.// -->
+
+
+                            <div class="price mt-1">
+                               
+                            {% if product.discount > 0 %}
+                             
+                            <span class="price-old">{{ product.price }}</span>
+                            
+                            <span class="price">{{ product.get_selling }}</span>
+                            {% else %}
+                            <span class="price">{{ product.price }}</span>
+                            {% endif %}
+
+                            </div> <!-- price-wrap.// -->
+
                         </figcaption>
                     </div>
                 </div> <!-- col.// -->
