--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -7,12 +7,12 @@
         <div class="container d-flex justify-content-between">
             <div class="p-2 ">
                 <a data-toggle="modal" data-target="#myModal2" href="#" class="link-dark">  <i class="fa fa-solid fa-phone"></i> &nbsp;  Customer Support +94 Testing </a> &nbsp;&nbsp;&nbsp;&nbsp;  
-                 <i class="fa-solid fa-envelope"></i>  &nbsp; Email :  sales@besttyre.lk  
+                 <i class="fa fa-solid fa-envelope"></i>  &nbsp; Email :  sales@besttyre.lk  
             </div>
             
             <div class=" p-2 ">
-                <a href="https://www.facebook.com/besttyre.lk"><i class="fa-brands fa-facebook"></i></a>  &nbsp; &nbsp;
-            <a href="https://www.instagram.com/besttyre">  <i class="fa-brands fa-instagram"></i></a>  &nbsp; &nbsp;
+                <a href="https://www.facebook.com/besttyre.lk"><i class="fa fa-brands fa-facebook"></i></a>  &nbsp; &nbsp;
+            <a href="https://www.instagram.com/besttyre">  <i class="fa fa-brands fa-instagram"></i></a>  &nbsp; &nbsp;
               <a href="#" class="link-dark" data-toggle="modal" data-target="#myModal2">  <i class="fa fa-solid fa-phone"></i></a>  
             </div>
         </div>
