--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -74,7 +74,7 @@ a:hover, a:focus {
     color: black; 
 }
 
-.topbar a:hover, a:focus {
+.topbar a:hover, .topbar a:focus {
     color: white; 
 }
 
@@ -129,4 +129,11 @@ a:hover, a:focus {
 	}
 
  
-	
+	.zoom {  
+		transition: transform .2s; /* Animation */ 
+		margin: 0 auto;
+	  }
+	  
+	  .zoom:hover {
+		transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+	  }
