--- a/templates/home/brands.html
+++ b/templates/home/brands.html
@@ -11,21 +11,41 @@
         </div>
     </div> <!-- container //  -->
     
-    <div class='col-lg-12'>
+    <div class='container'>
 
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="rounded mx-auto d-block img-fluid " style="height:400px;" src="{% static 'images/banners/nankang_head.jpg' %}" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="rounded mx-auto d-block img-fluid" style="height:400px;" src="{% static 'images/banners/INSTA3.png' %}" alt="Second slide">
-          </div>
-          <div class="carousel-item">
-            <img class="rounded mx-auto d-block img-fluid" style="height:400px;" src="{% static 'images/banners/nkban1.jpg' %}" alt="Third slide">
-          </div>
+      <div class="row mx-auto"  style="float: center;">
+       <div class="col-sm-2 zoom"> 
+      <img src="{% static 'images/banners/NANKANG.jpg'  %}" alt="..." class="img-thumbnail  rounded mx-auto d-block">
+       </div>
+       <div class="col-sm-2 zoom"> 
+      <img src="{% static 'images/banners/APLUS.jpg'  %}" alt="..." class="img-thumbnail  rounded mx-auto d-block">
+    </div>
+    <div class="col-sm-2 zoom"> 
+      <img src="{% static 'images/banners/SONAR.jpg'  %}" alt="..." class="img-thumbnail  rounded mx-auto d-block">
+    </div>
+     
+    </div>
+      <div class="row mx-auto">
+        <div class="col-sm-2 zoom"> 
+      <img src="{% static 'images/banners/KENDA.jpg'  %}" alt="..." class="img-thumbnail rounded mx-auto d-block">
+    </div>
+    <div class="col-sm-2 zoom"> 
+      <img src="{% static 'images/banners/WEST.jpg'  %}" alt="..." class="img-thumbnail rounded mx-auto d-block">
+    </div>
+    <div class="col-sm-2 zoom"> 
+      <img src="{% static 'images/banners/COOPER.jpg'  %}" alt="..." class="img-thumbnail rounded mx-auto d-block">
+    </div>
+   
+      <div class="row mx-auto">
+        <div class="col-sm-2 zoom"> 
+          <img src="{% static 'images/banners/JK.jpg'  %}" alt="..." class="img-thumbnail rounded mx-auto d-block">
         </div>
+        <div class="col-sm-2 zoom"> 
+     <img src="{% static 'images/banners/CEAT.jpg'  %}" alt="..." class="img-thumbnail rounded mx-auto d-block">
+    </div>
+     
       </div>
+     
     </div>
     
 </section>
