--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -100,7 +100,7 @@
 			</div> <!-- img-wrap.// -->
 			<figcaption class="info-wrap">
 				<div class="fix-height">
-					<a href="{{  product.slug  }}" class="title">{{ product.product_name }}</a>
+					<a href="{{  product.brand }}/{{  product.slug  }}" class="title">{{ product.product_name }}</a>
 					<div class="price-wrap mt-2">
 					
 						{% if product.discount > 0 %}
@@ -129,11 +129,11 @@
 					<ul class="pagination">
 						{% if products.has_previous %}
 						<li class="page-item">
-							<a class="page-link" href="{% url 'store' %}?page=1">First</a>
+							<a class="page-link" href="{{ request.path }}?page=1">First</a>
 						</li>
 						<li class="page-item">
 							<a class="page-link"
-								href="{% url 'store' %}?page={{products.previous_page_number}}">Previous</a>
+								href="{{ request.path }}?page={{products.previous_page_number}}">Previous</a>
 						</li>
 						{% else %}
 						<li class="page-item disabled">
@@ -145,34 +145,34 @@
 						{% endif %}
 						{% if products.number|add:'-2' >= 1 %}
 						<li class="page-item">
-							<a class="page-link" href="{% url 'store' %}?page={{ products.number|add:'-2' }}">&hellip;</a>
+							<a class="page-link" href="{{ request.path }}?page={{ products.number|add:'-2' }}">&hellip;</a>
 						</li>
 						{% endif %}
 						{% for page in products.paginator.page_range %}
 						{% if products.number|add:'-1' <= page and page <= products.number|add:'1' %}
 						{% if page == products.number %}
 						<li class="page-item active">
-							<a class="page-link" href="{% url 'store' %}?page={{ page }}">{{ page }}</a>
+							<a class="page-link" href="{{ request.path }}?page={{ page }}">{{ page }}</a>
 						</li>
 						{% else %}
 						<li class="page-item">
-							<a class="page-link" href="{% url 'store' %}?page={{ page }}">{{ page }}</a>
+							<a class="page-link" href="{{ request.path }}?page={{ page }}">{{ page }}</a>
 						</li>
 						{% endif %}
 						{% endif %}
 						{% endfor %}
 						{% if products.number|add:'2' <= products.paginator.num_pages %}
 						<li class="page-item">
-							<a class="page-link" href="{% url 'store' %}?page={{ products.number|add:'2' }}">&hellip;</a>
+							<a class="page-link" href="{{ request.path }}?page={{ products.number|add:'2' }}">&hellip;</a>
 						</li>
 						{% endif %}
 						{% if products.has_next %}
 						<li class="page-item">
-							<a class="page-link" href="{% url 'store' %}?page={{products.next_page_number}}">Next</a>
+							<a class="page-link" href="{{ request.path }}?page={{products.next_page_number}}">Next</a>
 						</li>
 						<li class="page-item">
 							<a class="page-link"
-								href="{% url 'store' %}?page={{ products.paginator.num_pages }}">Last</a>
+								href="{{ request.path }}?page={{ products.paginator.num_pages }}">Last</a>
 						</li>
 						{% else %}
 						<li class="page-item disabled">
