--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -11,8 +11,8 @@
             </div>
             
             <div class=" p-2 ">
-                <a href="https://www.facebook.com/besttyre.lk"><i class="fa fa-brands fa-facebook"></i></a>  &nbsp; &nbsp;
-            <a href="https://www.instagram.com/besttyre">  <i class="fa fa-brands fa-instagram"></i></a>  &nbsp; &nbsp;
+                <a href="https://www.facebook.com/besttyre.lk"><i class="fab fa-brands fa-facebook"></i></a>  &nbsp; &nbsp;
+            <a href="https://www.instagram.com/besttyre">  <i class="fab fa-brands fa-instagram"></i></a>  &nbsp; &nbsp;
               <a href="#" class="link-dark" data-toggle="modal" data-target="#myModal2">  <i class="fa fa-solid fa-phone"></i></a>  
             </div>
         </div>
